Fix 1px shift on animation
Can’t get 16px to work

--- a/client/marketing/components/knowledge-base/style.scss
+++ b/client/marketing/components/knowledge-base/style.scss
@@ -105,12 +105,14 @@
 			justify-content: flex-start;
 			align-items: center;
 			font-size: 12px;
-			line-height: 16px;
+			line-height: 17px;
 			color: $core-grey-dark-500;
 			margin: 0;
+			padding: 0;
+			height: 17px;
 
 			.woocommerce-gravatar {
-				margin-left: 5px;
+				margin: 1px 0 0 5px;
 			}
 		}
 	}
